# crewai-fcb-news

./: README.md  pyproject.toml  report.md
src/fcb_journal_crew/: crew.py  main.py
src/fcb_journal_crew/config/: agents.yaml  tasks.yaml
